# echoprint-android

./: README.md
app/: LICENSE  build.gradle
app/src/androidTest/java/org/android/echoprint/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/org/android/echoprint/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/org/android/echoprint/: ExampleUnitTest.java
lib/: CMakeLists.txt  build.gradle
lib/src/androidTest/java/org/android/echoprint/lib/: ExampleInstrumentedTest.java
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: AndroidCodegen.cpp  org_android_echoprint_lib_Codegen.h
lib/src/main/cpp/codegen/: AudioBufferInput.cpp  AudioBufferInput.h  AudioStreamInput.cpp  AudioStreamInput.h  Base64.cpp  Base64.h  Codegen.cpp  Codegen.h  Common.h  File.h  Fingerprint.cpp  Fingerprint.h  Makefile  MatrixUtility.cpp  MatrixUtility.h  Metadata.cpp  Metadata.h  Params.h  SubbandAnalysis.cpp  SubbandAnalysis.h  Whitening.cpp  Whitening.h  main.cpp  win_funcs.h  win_unistd.h
lib/src/main/java/org/android/echoprint/lib/: Codegen.java
lib/src/test/java/org/android/echoprint/lib/: ExampleUnitTest.java
